@@ -1,3 +1,10 @@
+20080101
+ - (dtucker) OpenBSD CVS Sync
+   - dtucker@cvs.openbsd.org 2007/12/31 10:41:31
+     [readconf.c servconf.c]
+     Prevent strict-aliasing warnings on newer gcc versions.  bz #1355, patch
+     from Dmitry V. Levin, ok djm@
+
 20071231
  - (dtucker) [configure.ac openbsd-compat/glob.{c,h}] Bug #1407: force use of
    builtin glob implementation on Mac OS X.  Based on a patch from
@@ -3487,4 +3494,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4811 2007/12/31 10:29:26 dtucker Exp $
+$Id: ChangeLog,v 1.4812 2008/01/01 09:32:26 dtucker Exp $
